蓝牙设备搜索连接功能初步完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         </activity>
 
         <service
-            android:name=".ClientService"
+            android:name=".BleService"
             android:enabled="true"
             android:exported="false"/>
 
